[gd_scene load_steps=19 format=3 uid="uid://pe475jgh20kj"]

[ext_resource type="Script" path="res://audio_demo.gd" id="1_x7ume"]
[ext_resource type="AudioStream" uid="uid://dud26gwijfgyk" path="res://audio/Harmony in Creation.mp3" id="2_k8mbe"]
[ext_resource type="Script" path="res://drum_looper.gd" id="3_dh07f"]
[ext_resource type="AudioStream" uid="uid://cgnbw7mi5m2bg" path="res://piano/How_Bout_Dat.wav" id="15_v412q"]
[ext_resource type="AudioStream" uid="uid://dbqmaras2o2fv" path="res://piano/How_Bout_Dat_2.wav" id="16_vddqr"]
[ext_resource type="AudioStream" uid="uid://rlm70ndjllid" path="res://piano/How_Bout_Dat_3.wav" id="17_s0f7r"]
[ext_resource type="AudioStream" uid="uid://bhs2rwd68kjuy" path="res://piano/How_Bout_Dat_4.wav" id="18_3ff7x"]
[ext_resource type="AudioStream" uid="uid://can8486t8gtom" path="res://piano/How_Bout_Dat_5.wav" id="19_0bkmg"]
[ext_resource type="AudioStream" uid="uid://82fm3r4u3u7p" path="res://piano/How_Bout_Dat_6.wav" id="20_cxamp"]
[ext_resource type="AudioStream" uid="uid://by2una83scjxd" path="res://piano/How_Bout_Dat_7.wav" id="21_7kj12"]
[ext_resource type="AudioStream" uid="uid://ddd4cknrx06q1" path="res://piano/How_Bout_Dat_10.wav" id="22_7ism4"]
[ext_resource type="AudioStream" uid="uid://wmtv53riga3i" path="res://piano/How_Bout_Dat_11.wav" id="23_0mri8"]
[ext_resource type="AudioStream" uid="uid://bu1fhce2q167r" path="res://piano/How_Bout_Dat_12.wav" id="24_s10sm"]
[ext_resource type="AudioStream" uid="uid://dtqwuo5ik4u67" path="res://piano/How_Bout_Dat_13.wav" id="25_p34f5"]
[ext_resource type="AudioStream" uid="uid://bwnxqgwy3cpvy" path="res://piano/How_Bout_Dat_14.wav" id="26_27tf8"]
[ext_resource type="AudioStream" uid="uid://c78l8mh35aik" path="res://piano/How_Bout_Dat_15.wav" id="27_xdxr2"]
[ext_resource type="AudioStream" uid="uid://dk7nxd84g6jwl" path="res://piano/How_Bout_Dat_16.wav" id="28_ibp4t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svh1v"]
size = Vector2(300, 39)

[node name="audio_demo" type="Node2D"]
script = ExtResource("1_x7ume")

[node name="HSlider4" type="HSlider" parent="."]
offset_left = 230.0
offset_top = 81.0
offset_right = 569.0
offset_bottom = 97.0
max_value = 20000.0

[node name="Button3" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Play!!!!"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_k8mbe")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(81, 118)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(130, 0.5)
shape = SubResource("RectangleShape2D_svh1v")

[node name="ColorRect" type="ColorRect" parent="Area2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 280.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Button" type="Button" parent="."]
offset_left = 436.0
offset_top = 208.0
offset_right = 477.0
offset_bottom = 239.0
text = "Play"

[node name="HSlider" type="HSlider" parent="."]
offset_left = 210.0
offset_top = 333.0
offset_right = 549.0
offset_bottom = 349.0
max_value = 4.0
step = 0.01

[node name="HSlider2" type="HSlider" parent="."]
offset_left = 437.0
offset_top = 387.0
offset_right = 1034.0
offset_bottom = 403.0
max_value = 20.0
step = 0.01

[node name="Button2" type="Button" parent="."]
offset_left = 89.0
offset_top = 252.0
offset_right = 176.0
offset_bottom = 283.0
text = "Next Note
"

[node name="HSlider3" type="HSlider" parent="."]
offset_left = 112.0
offset_top = 253.0
offset_right = 716.0
offset_bottom = 269.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(429, 305)

[node name="HSlider5" type="HSlider" parent="."]
offset_left = 163.0
offset_top = 42.0
offset_right = 460.0
offset_bottom = 58.0
min_value = 20.0
max_value = 20000.0
value = 20.0

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("3_dh07f")

[node name="HowBoutDat" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("15_v412q")

[node name="HowBoutDat2" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("16_vddqr")

[node name="HowBoutDat3" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("17_s0f7r")

[node name="HowBoutDat4" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("18_3ff7x")

[node name="HowBoutDat5" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("19_0bkmg")

[node name="HowBoutDat6" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("20_cxamp")

[node name="HowBoutDat7" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("21_7kj12")

[node name="HowBoutDat10" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("22_7ism4")

[node name="HowBoutDat11" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("23_0mri8")

[node name="HowBoutDat12" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("24_s10sm")

[node name="HowBoutDat13" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("25_p34f5")

[node name="HowBoutDat14" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("26_27tf8")

[node name="HowBoutDat15" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("27_xdxr2")

[node name="HowBoutDat16" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("28_ibp4t")

[node name="Timer" type="Timer" parent="Node2D"]
wait_time = 0.2
autostart = true

[connection signal="value_changed" from="HSlider4" to="." method="_on_h_slider_4_value_changed"]
[connection signal="button_down" from="Button3" to="." method="_on_button_3_button_down"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="HSlider2" to="." method="_on_h_slider_2_value_changed"]
[connection signal="value_changed" from="HSlider3" to="." method="_on_h_slider_3_value_changed"]
[connection signal="value_changed" from="HSlider5" to="." method="_on_h_slider_5_value_changed"]
[connection signal="timeout" from="Node2D/Timer" to="Node2D" method="_on_timer_timeout1"]
